...
        if (state !is AuthState.LoggedIn)
            Button(
                onClick = onSubmit,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(8.dp)
                    .testTag("login_continue_button"),
                enabled = canSubmit
            ) {
                if (isLoading) {
                    CircularProgressIndicator(modifier = Modifier.size(20.dp))
                } else {
                    Text("Continue")
...
